--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Lens by HTML5 UP</title>
+		<title>Bienvenido! Yo soy Andrea Bertieri!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,8 +22,9 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Lens</h1>
-						<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+						<h1>Andrea Bertieri</h1>
+						<p>Bienvenidos a mi espacio de trabajo te invito a conocer un poco màs de mi.<a href="http://html5up.net">HTML5 UP</a></p>
+						<p>.<a href="http://html5up.net">SOBRE MÌ </a><a href="http://html5up.net">ABOUT ME</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
