Correciones Titulo y Datos Bàsicos

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Andrea Bertieri</h1>
-						<p>Bienvenidos a mi espacio de trabajo te invito a conocer un poco màs de mi.<a href="http://html5up.net">HTML5 UP</a></p>
-						<p>.<a href="http://html5up.net">SOBRE MÌ </a><a href="http://html5up.net">ABOUT ME</a></p>
+						<p>Bienvenidos a mi espacio de trabajo! Te invito a conocer un poco màs de mi</p>
+						<p>.<a href="http://html5up.net">SOBRE MÌ	</a><a href="http://html5up.net">	ABOUT ME</a></p>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
