Banner Superior y Seccion Sobre mi

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 				<div class="top">
 
 					<!-- Logo -->
-						<div id="logo">
+						<div id="logo"><a href="#top">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Andrea Bertieri</h1>
 							<p>Ingeniera Mecatrònica</p>
-						</div>
+						</a></div>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -38,11 +38,11 @@
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contacto</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a>
 								<!-- Thumbnail -->
-					<section id="thumbnails">
+					<div id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<h2>Diseño y Desarrollo Web</h2>
+							<p>EL crear plataformas que para mis clientes y usuarios sean agradables y a su vez ùtiles es mi prioridad. Procuro hacer propuestas diferentes e innovadoras y a su vez aprender cada vez màs con cada nuevo proyecto.   <a href="#">Ver màs</a></p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
@@ -69,7 +69,7 @@
 							<h2>Phasellus magna faucibus</h2>
 							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
 						</article>
-					</section>
+					</div>
 								</li>
 							</ul>
 						</nav>
@@ -85,6 +85,79 @@
 						</ul>
 					</footer>
 
+			</div>
+
+			<div class="content">
+				<!-- Intro -->
+					<section id="top" class="one dark cover">
+						<div class="container">
+
+							<header>
+								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
+								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
+								<p>Ligula scelerisque justo sem accumsan diam quis<br />
+								vitae natoque dictum sollicitudin elementum.</p>
+							</header>
+
+							<footer>
+								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+							</footer>
+
+						</div>
+					</section>
+				
+				<!-- About Me -->
+					<section id="about" class="three">
+						<div class="container">
+
+							<header>
+								<h2>Sobre Mì</h2>
+							</header>
+
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+
+							<p>Profesionalmente soy una mujer muy curiosa, que siempre està buscando alternativas y formas nuevas de hacer las cosas. Alimento mi creatividad a travès de experiencias artìsticas como la ilustraciòn digital, la fotografìa y estando abierta a la posibilidad de hacer las cosas siempre de una forma diferente y no dar nada por hecho.</p>
+							<p>La ingenierìa es para mì, la herramienta que me permite comunicarme con las cosas que no pueden hablar y poder interpretar esa informaciòn me permite conocer y comprender mi entorno para tomar siempre mejores decisiones</p>
+							<p>Busco crecer siempre de una forma integral, ser màs habil en los negocios, como ingeniera, como desarrolladora, como artista y para ello me enfoco en aplicar mis conocimientos, procurando siempre construir herramientas que generen valor a la sociedad </p>
+							<p>Esperando que les guste, los invito a conocer mi trabajo. Todos los comentarios son bienvenidos.</p>
+
+						</div>
+					</section>
+
+				<!-- Contact -->
+					<section id="contact" class="four">
+						<div class="container">
+
+							<header>
+								<h2>Contact</h2>
+							</header>
+
+							<p>Elementum sem parturient nulla quam placerat viverra
+							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
+							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
+							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+
+							<form method="post" action="#">
+								<div class="row">
+									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
+									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="12u$">
+										<textarea name="message" placeholder="Message"></textarea>
+									</div>
+									<div class="12u$">
+										<input type="submit" value="Send Message" />
+									</div>
+								</div>
+							</form>
+
+						</div>
+					</section>
+
+					<section id="portfolio" class="two">
+					</section>
+
+
+				
 			</div>
 
 		<!-- Scripts -->
