--- a/index.html
+++ b/index.html
@@ -129,23 +129,21 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Contàctame</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>Si te gustò mi trabajo, o si no. Si quieres un consejo, darme sugerencias, regaños o simplemente contarme un chiste! Siempre estarè atenta a tus solicitudes. Dale, no seas timido!</p>
 
-							<form method="post" action="#">
+							<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSd_nB3S4e_uCKb-WiHtqtEA94iUqpELcCQcf937XI51fZdQRg/formResponse" target="hidden_iframe" onsubmit="submitted=true;" >
 								<div class="row">
-									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="6u 12u$(mobile)"><input type="text" name="entry.1584999837" placeholder="Nombre" id="entry.1584999837" /></div>
+									<div class="6u$ 12u$(mobile)"><input type="text" name="entry.1417963624" placeholder="Email" id="entry.1417963624"/></div>
 									<div class="12u$">
-										<textarea name="message" placeholder="Message"></textarea>
+										<textarea name="entry.1469366572" placeholder="Mensaje" id="entry.1469366572"></textarea>
 									</div>
 									<div class="12u$">
-										<input type="submit" value="Send Message" />
+										<input type="submit" value="Submit" />
+										<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 									</div>
 								</div>
 							</form>
@@ -168,6 +166,13 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+			<script type="text/javascript">var submitted=false;</script>
+<script type="text/javascript">
+$('#gform').on('submit', function(e) {
+  $('#gform *').fadeOut(2000);
+  $('#gform').prepend('Your submission has been processed...');
+  });
+</script>
 
 	</body>
 </html>
